istio/gateway-virtualservice-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-js
spec:
  host: service-js
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-python
spec:
  host: service-python
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-test
spec:
  hosts:
  - "istio-test.will"
  gateways:
  - istio-test-gateway
  http:
  - match:
    - uri:
        prefix: /env
    route:
    - destination:
        host: service-python
        subset: v1
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: service-js
        subset: v1
