istio/gateway-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-test
spec:
  hosts:
  - "istio-test.will"
  gateways:
  - istio-test-gateway
  http:
  - match:
    - uri:
        prefix: /env
    route:
    - destination:
        host: service-python
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: service-js
