istio/route-rule-go-v1-v2.yaml
# 流量拆分
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-go
spec:
  host: service-go
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go
spec:
  hosts:
    - service-go
  http:
  - route:
    - destination:
        host: service-go
        subset: v1
      weight: 50
    - destination:
        host: service-go
        subset: v2
      weight: 50
