istio/route-rule-js-by-agent.yml
# 根据请求头配置路由
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-js
spec:
  host: service-js
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-js
spec:
  hosts:
  - service-js
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*?(Chrome).*?"
    route:
    - destination:
        host: service-js
        subset: v1
  - match:
    - headers:
        user-agent:
          regex: ".*?(Firefox).*?"
    route:
    - destination:
        host: service-js
        subset: v2
