istio/route-rule-node-retry.yml
# 重试
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-node
spec:
  host: service-node
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-node
spec:
  hosts:
  - service-node
  http:
  - route:
    - destination:
        host: service-node
        subset: v1
    retries:
      attempts: 3
      perTryTimeout: 2s
