istio/route-rule-python-default.yml
# python流量路由到v1版本
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-python
spec:
  host: service-python
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-python
spec:
  hosts:
  - service-python
  http:
  - route:
    - destination:
        host: service-python
        subset: v1
